--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'xyz.oribuin'
-version '1.0-B3'
+version '1.0'
 compileJava.options.encoding = 'UTF-8'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
